Segregate client-side argument exceptions from server-side
* Client argument validation throws IllegalClientArgumentException rather than IllegalArgumentException
* RestletApplication$CustomStatusService#toStatus treats IllegalClientArgumentExceptions as 400s and IllegalArgumentExceptions as 500s