@@ -1,10 +1,11 @@
 package edu.illinois.library.cantaloupe.resource.iiif.v1;
 
 import edu.illinois.library.cantaloupe.operation.Rotate;
+import edu.illinois.library.cantaloupe.resource.IllegalClientArgumentException;
 import edu.illinois.library.cantaloupe.util.StringUtil;
 
 /**
- * Encapsulates the "rotation" component of an IIIF request URI.
+ * Encapsulates the "rotation" component of a URI.
  *
  * @see <a href="http://iiif.io/api/image/1.1/#parameters-rotation">IIIF Image
  * API 1.1</a>
@@ -13,13 +14,19 @@ class Rotation implements Comparable<Object> {
 
     private float degrees = 0f;
 
-    public static Rotation fromUri(String rotationUri)
-            throws IllegalArgumentException {
+    /**
+     * @param rotationUri Rotation component of a URI.
+     * @return            Instance corresponding to the given argument.
+     * @throws IllegalClientArgumentException if the argument is invalid.
+     */
+    public static Rotation fromUri(String rotationUri) {
         Rotation rotation = new Rotation();
         try {
             rotation.setDegrees(Float.parseFloat(rotationUri));
         } catch (NumberFormatException e) {
-            throw new IllegalArgumentException("Invalid rotation");
+            throw new IllegalClientArgumentException("Invalid rotation");
+        } catch (IllegalArgumentException e) {
+            throw new IllegalClientArgumentException(e.getMessage(), e);
         }
         return rotation;
     }
@@ -27,13 +34,12 @@ class Rotation implements Comparable<Object> {
     @Override
     public int compareTo(Object object) {
         if (object instanceof Rotate) {
-            Rotate rotate =
-                    (Rotate) object;
-            return new Float(this.getDegrees()).
+            Rotate rotate = (Rotate) object;
+            return Float.valueOf(this.getDegrees()).
                     compareTo(rotate.getDegrees());
         } else if (object instanceof Rotation) {
             Rotation rotation = (Rotation) object;
-            return new Float(this.getDegrees()).
+            return Float.valueOf(this.getDegrees()).
                     compareTo(rotation.getDegrees());
         }
         return -1;
@@ -53,29 +59,30 @@ class Rotation implements Comparable<Object> {
 
     @Override
     public int hashCode(){
-        return new Float(this.getDegrees()).hashCode();
+        return Float.valueOf(this.getDegrees()).hashCode();
     }
 
     /**
      * @param degrees Degrees of rotation between 0 and 360
-     * @throws IllegalArgumentException
+     * @throws IllegalClientArgumentException if the argument is invalid.
      */
-    public void setDegrees(float degrees) throws IllegalArgumentException {
+    public void setDegrees(float degrees) {
         if (degrees < 0 || degrees > 360) {
-            throw new IllegalArgumentException("Degrees must be between 0 and 360");
+            throw new IllegalClientArgumentException(
+                    "Degrees must be between 0 and 360");
         }
         this.degrees = degrees;
     }
 
     public Rotate toRotate() {
-        return new Rotate(this.getDegrees());
+        return new Rotate(getDegrees());
     }
 
     /**
-     * @return Value compatible with the rotation component of an IIIF URI.
+     * @return Value compatible with the rotation component of a URI.
      */
     public String toString() {
-        return StringUtil.removeTrailingZeroes(this.getDegrees());
+        return StringUtil.removeTrailingZeroes(getDegrees());
     }
 
 }
